--- a/webapp/index.html
+++ b/webapp/index.html
@@ -35,7 +35,7 @@
 	<meta name="twitter:description" content="Social network for sharing and discovery.">
 	<meta name="twitter:image" content="https://www.waxloop.com/Logo.svg">
 
-	<script src="https://kit.fontawesome.com/dcc8a385b9.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.myfi.ws/fa/js/all.js"></script>
     <script src="https://cdn.myfi.ws/highlight/highlight.min.js"></script>
 	<link data-trunk href="css/app.css" rel="css" />
     <script src="https://cdn.myfi.ws/i/tooltips.js"></script>
