--- a/webapp/index.html
+++ b/webapp/index.html
@@ -35,7 +35,7 @@
 	<meta name="twitter:description" content="Social network for sharing and discovery.">
 	<meta name="twitter:image" content="https://www.waxloop.com/Logo.svg">
 
-	<script src="https://cdn.myfi.ws/webui/fa.js" async></script>
+	<script src="https://cdn.myfi.ws/webui/loader.min.js" async></script>
 	<script src="https://cdn.myfi.ws/highlight/highlight.min.js" async></script>
 	<script src="https://cdn.myfi.ws/i/tooltips.min.js" async></script>
 	<link data-trunk href="css/app.min.css" rel="css" />
